--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,20 @@
 
 
 body{
-font-size:14px;
-line-height:normal;
-color: inherit;
-font-weight: bold;
-font-family:PTSans Narrow;
+  font-size:14px;
+  line-height:normal;
+  color: black;
+  font-weight: bold;
+  font-family:"PTSans Narrow", "Arial", "sans-serif";
 }
 
 .main-navigation{
-font-size:16px;
-line-height:normal;
-color: inherit;
-font-weight: bold;
-font-family:PTSans Narrow;
+  font-size:16px;
+  line-height:normal;
+  color: inherit;
 }
 /*В набор входят в item-details*/
 h3{
-font-size:24px;
-line-height:normal;
-color: inherit;
-font-weight: bold;
-font-family:PTSans Narrow;
+  font-size:24px;
+  line-height:normal;
 }
