--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body{
   font-size:14px;
-  line-height:normal;
+  line-height:17px;
   color: black;
   font-weight: bold;
   font-family:"PTSans Narrow", "Arial", "sans-serif";
@@ -10,11 +10,11 @@ body{
 
 .main-navigation{
   font-size:16px;
-  line-height:normal;
-  color: inherit;
+  line-height:19px;
+  color: black;
 }
 /*В набор входят в item-details*/
 h3{
   font-size:24px;
-  line-height:normal;
+  line-height:29px;
 }
