--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,88 @@ body{
   font-weight: bold;
   font-family:"PTSans Narrow", "Arial", "sans-serif";
 }
-
+/*по файлу item-details.html*/
 .main-navigation{
+  width: 780px;
+  min-height: 70px;
   font-size:16px;
   line-height:19px;
   color: black;
 }
-/*В набор входят в item-details*/
+
 h3{
   font-size:24px;
   line-height:29px;
 }
+
+.main-header{
+  min-height: 70px;
+  margin-bottom: 60px;
+}
+
+.container{
+  width: 940px;
+  margin:0 auto;
+  padding-left:10px;
+  padding-right:10px;
+}
+
+.user-block {
+  float: right;
+  width: 140px;
+  min-height: 70px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.big-image{
+  float: left;
+  width: 460px;
+  margin-right: 60px;
+}
+
+.item-description{
+  float: right;
+  width: 390px;
+}
+
+.main-footer{
+  margin-top: 50px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.footer-contacts{
+  float: left;
+  width: 320px;
+  margin-right: 60px;
+}
+
+.footer-social{
+  float: left;
+  width: 180px;
+}
+
+.footer-copyright{
+  float: right;
+  width: 180px;
+}
+/*КОНЕЦ по файлу item-details.html*/
+
+/*по файлу Catalog.html*/
+.catalog{
+  float: left;
+  width: 230px;
+}
+
+.card{
+  float: right;
+  width: 210px;
+  padding: 10px;
+}
+
+/*КОНЕЦ по файлу Catalog.html*/
